[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/PowerUp/PowerUp.gd" type="Script" id=1]
[ext_resource path="res://assets/space_shooter_pack/Graphics/spritesheets/power-up.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "1",
"speed": 3.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "2",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 8.0351

[node name="PowerUp" type="Area2D" groups=[
"GameElements",
]]
z_index = -1
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "1"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="BlinkingTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_PowerUp_body_entered"]
[connection signal="timeout" from="BlinkingTimer" to="." method="_on_BlinkingTimer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
